--- a/src/Components/Card/Card.module.css
+++ b/src/Components/Card/Card.module.css
@@ -1,3 +1,27 @@
 .selected{
     background-color: yellow;
 }
+
+.colorDiv{
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    border: 2px solid black;
+    background-color: gray;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flexCenter{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.colorDiv > p {
+    color: white;
+    font-size: 20px;
+    font-weight: bold;
+}
